nsg.tf
resource "azurerm_network_security_group" "front_nsg" {
    name                = "front-nsg"
    location            = "${azurerm_resource_group.r_group.location}"
    resource_group_name = "${azurerm_resource_group.r_group.name}"
    
    security_rule {
        name                       = "SSH"
        priority                   = 1001
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name                       = "HTTP"
        priority                   = 1002
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "80"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
    security_rule {
        name                       = "HTTPS"
        priority                   = 1003
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "443"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
}

resource "azurerm_network_security_group" "back_nsg" {
    name                = "back-nsg"
    location            = "${azurerm_resource_group.r_group.location}"
    resource_group_name = "${azurerm_resource_group.r_group.name}"
    
    security_rule {
        name                       = "SSH"
        priority                   = 1001
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefixes      = ["10.0.1.0/24", "10.0.3.0/24"]
        destination_address_prefix = "*"
    }
}

resource "azurerm_network_security_group" "manager_nsg" {
    name                = "manager-nsg"
    location            = "${azurerm_resource_group.r_group.location}"
    resource_group_name = "${azurerm_resource_group.r_group.name}"
    
    security_rule {
        name                       = "SSH"
        priority                   = 1001
        direction                  = "Inbound"
        access                     = "Allow"
        protocol                   = "Tcp"
        source_port_range          = "*"
        destination_port_range     = "22"
        source_address_prefix      = "*"
        destination_address_prefix = "*"
    }
}
